--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body{
             height: 125px;
             position: fixed;
             top: 26rem;
+            left: 0px;
            
 
         }
